IF(WIN32)
  SET(EXPORT_FILE "cio_plugin.def")
ENDIF()

IF(GNUTLS_FOUND)
  IF (NOT ${DEFAULT_SSL} STREQUAL "GNUTLS")
    SET(CMAKE_SHARED_LIBRARY_PREFIX "")
    ADD_LIBRARY(cio_gnutls SHARED cio_gnutls.c ${EXPORT_FILE})
    TARGET_LINK_LIBRARIES(cio_gnutls ${GNUTLS_LIBRARIES})
  ENDIF()
ENDIF()

IF(OPENSSL_FOUND)
  IF (NOT ${DEFAULT_SSL} STREQUAL "OPENSSL")
    SET(CMAKE_SHARED_LIBRARY_PREFIX "")
    SET(source_files cio_openssl.c ${EXPORT_FILE})
    ADD_LIBRARY(cio_openssl SHARED ${source_files})
    TARGET_LINK_LIBRARIES(cio_openssl ${OPENSSL_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  ENDIF()
ENDIF()

IF(WIN32)
  SET(CMAKE_SHARED_LIBRARY_PREFIX "")
  IF (NOT ${DEFAULT_SSL} STREQUAL "SCHANNEL")
    ADD_LIBRARY(cio_schannel SHARED cio_schannel.c ${EXPORT_FILE})
  ENDIF()
  ADD_LIBRARY(cio_npipe SHARED cio_npipe.c ${EXPORT_FILE})
ENDIF()
