IF(WIN32)
  SET(EXPORT_FILE "cio_plugin.def")
ENDIF()

SET(CMAKE_SHARED_LIBRARY_PREFIX "")

IF(SOCKET_PLUGIN_TYPE MATCHES "DYNAMIC")
  ADD_DEFINITIONS(-DHAVE_SOCKET_DYNAMIC=1)
  ADD_LIBRARY(cio_socket SHARED cio_socket.c ${EXPORT_FILE})
  SET(INSTALL_LIBS cio_socket)
ENDIF()

IF(WIN32)
  IF(NPIPE_PLUGIN_TYPE MATCHES "DYNAMIC")
    ADD_DEFINITIONS(-DHAVE_NPIPE_DYNAMIC=1)
    ADD_LIBRARY(cio_npipe SHARED cio_npipe.c ${EXPORT_FILE})
    SET(INSTALL_LIBS ${INSTALL_LIBS} cio_npipe)
  ENDIF()
  IF(SHMEM_PLUGIN_TYPE MATCHES "DYNAMIC")
    ADD_DEFINITIONS(-DHAVE_SHMEM_DYNAMIC=1)
    ADD_LIBRARY(cio_shmem SHARED cio_shmem.c ${EXPORT_FILE})
    SET(INSTALL_LIBS ${INSTALL_LIBS} cio_shmem)
  ENDIF()
ENDIF()

IF(INSTALL_LIBS)
    INSTALL(TARGETS
            ${INSTALL_LIBS}
            RUNTIME DESTINATION "${PLUGIN_INSTALL_DIR}"
            LIBRARY DESTINATION "${PLUGIN_INSTALL_DIR}"
            ARCHIVE DESTINATION "${PLUGIN_INSTALL_DIR}")
ENDIF()
