INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

IF(CURL_FOUND)
  # remote file plugin
  INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
  SET(REMOTE_IO_SOURCES remote_io.c)
  ADD_LIBRARY(remote_io SHARED ${REMOTE_IO_SOURCES} ${CMAKE_SOURCE_DIR}/plugins/plugin.def)
  TARGET_LINK_LIBRARIES(remote_io ${CURL_LIBRARIES})

  SET_TARGET_PROPERTIES(remote_io PROPERTIES PREFIX "")

  INSTALL(TARGETS
            remote_io
            RUNTIME DESTINATION "${PLUGIN_INSTALL_DIR}"
            LIBRARY DESTINATION "${PLUGIN_INSTALL_DIR}"
            ARCHIVE DESTINATION "${PLUGIN_INSTALL_DIR}")
ENDIF()
