INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/install_plugins.cmake)

IF(REMOTEIO_PLUGIN_TYPE MATCHES "DYNAMIC")
  IF(CURL_FOUND)
    # remote file plugin
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    SET(REMOTE_IO_SOURCES remote_io.c)
    ADD_LIBRARY(remote_io SHARED ${REMOTE_IO_SOURCES} ${CMAKE_SOURCE_DIR}/plugins/plugin.def)
    TARGET_LINK_LIBRARIES(remote_io ${CURL_LIBRARIES})

    SET_TARGET_PROPERTIES(remote_io PROPERTIES PREFIX "")

    INSTALL_PLUGIN(remote_io ${CMAKE_BINARY_DIR}/plugins/io)
  ENDIF()
ENDIF()
