IF(WIN32)
  SET(EXPORT_FILE "pvio_plugin.def")
ENDIF()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(CMAKE_SHARED_LIBRARY_PREFIX "")

IF(SOCKET_PLUGIN_TYPE MATCHES "DYNAMIC")
  ADD_DEFINITIONS(-DHAVE_SOCKET_DYNAMIC=1)
  ADD_LIBRARY(pvio_socket SHARED pvio_socket.c ${EXPORT_FILE})
  SET(INSTALL_LIBS pvio_socket)
ENDIF()

IF(WIN32)
  IF(NPIPE_PLUGIN_TYPE MATCHES "DYNAMIC")
    ADD_DEFINITIONS(-DHAVE_NPIPE_DYNAMIC=1)
    ADD_LIBRARY(pvio_npipe SHARED pvio_npipe.c ${EXPORT_FILE})
    SET(INSTALL_LIBS ${INSTALL_LIBS} pvio_npipe)
  ENDIF()
  IF(SHMEM_PLUGIN_TYPE MATCHES "DYNAMIC")
    ADD_DEFINITIONS(-DHAVE_SHMEM_DYNAMIC=1)
    ADD_LIBRARY(pvio_shmem SHARED pvio_shmem.c ${EXPORT_FILE})
    SET(INSTALL_LIBS ${INSTALL_LIBS} pvio_shmem)
  ENDIF()
ENDIF()

IF(INSTALL_LIBS)
    INSTALL(TARGETS
            ${INSTALL_LIBS}
            RUNTIME DESTINATION "${PLUGIN_INSTALL_DIR}"
            LIBRARY DESTINATION "${PLUGIN_INSTALL_DIR}"
            ARCHIVE DESTINATION "${PLUGIN_INSTALL_DIR}")
ENDIF()
