INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# Trace example plugin
IF(TRACE_EXAMPLE_PLUGIN_TYPE MATCHES "DYNAMIC")
  ADD_DEFINITIONS(-DHAVE_TRACE_EXAMPLE_PLUGIN_DYNAMIC=1)
  SET(TRACE_EXAMPLE_SOURCES trace_example.c)
  IF(WIN32)
    SET(TRACE_EXAMPLE_SOURCES ${TRACE_EXAMPLE_SOURCES} ${CMAKE_SOURCE_DIR}/plugins/plugin.def)
  ENDIF()
  ADD_LIBRARY(trace_example SHARED ${TRACE_EXAMPLE_SOURCES})
  SET_TARGET_PROPERTIES(trace_example PROPERTIES PREFIX "")

  INSTALL(TARGETS
            trace_example
            RUNTIME DESTINATION "${PLUGIN_INSTALL_DIR}"
            LIBRARY DESTINATION "${PLUGIN_INSTALL_DIR}"
            ARCHIVE DESTINATION "${PLUGIN_INSTALL_DIR}")
ENDIF()
